styles.css: Fix invisible input text on black bg

--- a/public/styles.css
+++ b/public/styles.css
@@ -14,3 +14,7 @@ footer {
 canvas {
 	display: block;
 }
+
+input {
+	color: #eeeeee;
+}
